--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,12 +1,16 @@
 name: Deploy using AWS SSM Send-Command 
+
 on:
     push:
         branches: [main]
+
 jobs:
     start:
         runs-on: ubuntu-latest 
+
         steps:
-         - uses: actions/checkout@v2
+            - uses: actions/checkout@v2
+
         - name: AWS SSM Send Command
               uses: peterkimzz/aws-ssm-send-command@1.0.1
           with:
@@ -14,6 +18,6 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY  }}
           aws-region: eu-central-1
           instance-ids: ${{ secrets.INSTANCE_ID  }}
-          comment: Deploy the main branch
+          comment: Deploy the master branch
           working-directory: /home/ubuntu/mern-app
           command: /bin/sh ./deploy.sh
