--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,8 +10,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: AWS SSM Send Command
-      uses: peterkimzz/aws-ssm-send-command@1.0.1
-      with:
+        uses: peterkimzz/aws-ssm-send-command@master
+        with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID  }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY  }}
         aws-region: eu-central-1
